<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/photoView"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/movie_poster" />
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/photoView"
        android:text="@string/name_movie"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginStart="26dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/photoView"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/release" />
    <TextView
        android:id="@+id/tv_sutradara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_release"
        android:layout_marginStart="26dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/photoView"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/sutradara" />
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/photoView"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:text="@string/description" />
</RelativeLayout>